# nto-ai-sp1

./: .gitignore  AI_usage.md  pyproject.toml
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
src/: bert.py  config.py  convert.py  data_load.py  data_processing.py  hist.py  model.py  tfidf.py
