[project]
name = "nto-ai-sp1"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "torch (>=2.9.1,<3.0.0)",
    "sentence-transformers (>=5.1.2,<6.0.0)",
    "transformers (>=4.57.3,<5.0.0)",
    "hf-xet (>=1.2.0,<2.0.0)",
    "fastparquet (>=2024.11.0,<2025.0.0)",
    "catboost (>=1.2.8,<2.0.0)",
]

[tool.poetry]
packages = [{include = "nto_ai_sp1", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
